--- a/yaml_dir/ingress.yml
+++ b/yaml_dir/ingress.yml
@@ -21,9 +21,9 @@ spec:
         path: "/"
         backend:
           service:
-            name: cursojs-backend
+            name: backend-cursoJS
             port: 
-              number: 3000
+              number: 5000
   tls:
   - hosts:
     - cursojs.nodeiot.app.br
